# narratives

./: .env.example  .gitignore  README.md  build_frontend.bat  export_data.bat  run_pipeline.bat  start.bat  vercel.json
backend/: pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/nie/: __init__.py  cli.py  config.py
backend/nie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/nie/api/: main.py
backend/nie/api/routers/: bottlenecks.py  graph.py  kb.py  narratives.py  opportunities.py  pipeline.py  reports.py
backend/nie/datasources/: kb.py  market.py  news.py
backend/nie/db/: __init__.py  base.py  models.py
backend/nie/llm/: __init__.py  client.py  prompts.py
backend/nie/pipeline/: catalog.py  report_builder.py
backend/nie/schemas/: narrative.py
backend/nie/scripts/: count_narratives.py
backend/nie/services/: company_heatmap.py  entity_entries.py  lifecycle.py
backend/scripts/: export_static_data.py  resynth_one.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/data/: README.md  bottlenecks.json  company-heatmap.json  graph.json  heatmap.json  lifecycle-map.json  manifest.json  narratives.json  opportunities.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  staticData.ts  types.ts
frontend/src/components/: NarrativeLifecycleChart.tsx  ReportSection.tsx  ScoreCell.tsx  ScoreLegend.tsx
frontend/src/hooks/: usePipeline.ts
(+198 files in other folders)
