[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nie"
version = "0.1.0"
description = "Narrative Intelligence Engine — identify, model, analyze and forecast investment narratives."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openai>=1.30",
    "httpx>=0.27",
    "feedparser>=6.0",
    "yfinance>=0.2.40",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
nie = "nie.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nie*"]

[tool.ruff]
line-length = 100
target-version = "py311"
